basic layout of red folder app setup

--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 ---
-layout: default
-title: Home
+layout: appFramework
+title: Red Folder
 ---
-<section role="banner">
-  <img src="/img/banner.jpg" />
-</section>
- 
-<section class="content">
-  <p>
-  Welcome this page is the new home of the red folder initative.
-</p> 
-</section>
+
+<h2>Contact us</h2>
+<p>Main office: (909)123-4567</p>
